--- a/simpleThreadTest/Makefile
+++ b/simpleThreadTest/Makefile
@@ -1,6 +1,11 @@
-.PHONY : fuck
+.PHONY : all
+
+all: fuck cthread
+	@echo all
 
 fuck :
 	g++ -Wall -g -o fuck -std=c++0x -pthread fuckcpp.cpp
 
+cthread :
+	g++ -pthread cthread.cpp -o cthread -Wall -g
 
