network client and server is ok for或许多的,或在几个或许多之间分的

--- a/simpleNetworkTest/Makefile
+++ b/simpleNetworkTest/Makefile
@@ -1,6 +1,6 @@
-.PHONY : all
+.PHONY : all clean selectserver selectclient client server
 
-all: client server
+all: client server selectserver selectclient
 	@echo all
 
 client :
@@ -8,4 +8,13 @@ client :
 
 server :
 	g++ -pthread server.cpp -o server -Wall -g
+
+selectserver:
+	g++ -pthread selectserver.cpp -o selectserver -Wall -g
+
+selectclient:
+	g++ -pthread selectclient.cpp -o selectclient -Wall -g
+
+clean:
+	rm client server selectclient selectserver
 
